updated in form

--- a/forms.html
+++ b/forms.html
@@ -22,6 +22,9 @@
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" required>
     <br><br>
+    <label for="city">city:</label>
+    <input type="text" id="city" name="city" required>
+    <br><br>
 
     <!-- Gender -->
     <p>Gender:</p>
