--- a/forms.html
+++ b/forms.html
@@ -3,65 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HTML Form Example</title>
+  <title>Document</title>
 </head>
 <body>
-  <h1>Registration Form</h1>
-  <form action="/submit" method="post">
-    <!-- Name -->
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required>
-    <br><br>
-
-    <!-- Email -->
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required>
-    <br><br>
-    
-    <!-- Password -->
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required>
-    <br><br>
-    <label for="city">city:</label>
-    <input type="text" id="city" name="city" required>
-    <br><br>
-
-    <!-- Gender -->
-    <p>Gender:</p>
-    <label>
-      <input type="radio" name="gender" value="male" required> Male
-    </label>
-    <label>
-      <input type="radio" name="gender" value="female" required> Female
-    </label>
-    <br><br>
-
-    <!-- Interests -->
-    <p>Interests:</p>
-    <label>
-      <input type="checkbox" name="interests" value="coding"> Coding
-    </label>
-    <label>
-      <input type="checkbox" name="interests" value="music"> Music
-    </label>
-    <br><br>
-
-    <!-- Country -->
-    <label for="country">Country:</label>
-    <select id="country" name="country">
-      <option value="us">United States</option>
-      <option value="uk">United Kingdom</option>
-      <option value="in">India</option>
-    </select>
-    <br><br>
-
-    <!-- Message -->
-    <label for="message">Message:</label>
-    <textarea id="message" name="message" rows="4" cols="50"></textarea>
-    <br><br>
-
-    <!-- Submit Button -->
-    <button type="submit">Submit</button>
-  </form>
+    <h1>This is html form</h1>
+    <form action="backend.php">
+      <div>Name : <input type="text" name="name"></div><br>
+      <div>Role : <input type="text" name="myrole"></div><br>
+      <div>Email : <input type="email" name=""></div><br>
+      <div>Date: <input type="date"></div><br>
+      <div>Bonus: <input type="number"       name="bonus"></div><br>
+      <div>Eligiblity: <input type="checkbox" name="Eligiblity"></div><br>
+      <div>Gender: Male<input type="radio" name="Gender">
+        Female<input type="radio" name="Gender">
+        Other <input type="radio" name="Gender">
+      </div><br>
+      <div>
+        <label for="car">car</label>
+        <select name="mycar" id="car">
+          <option>select your car</option>
+          <option>indica</option>
+          <option>maruthi</option>
+          <option>mahindra</option>
+        </select>
+      </div><br>
+      <div><Textarea type="mytext">write abour yourself</Textarea></div><br>
+      <div><input type="submit" value="submit now">
+           <input type="reset" value="Reset now"></div><br>
+    </form>
 </body>
 </html>
