--- a/table.html
+++ b/table.html
@@ -8,61 +8,45 @@
 <body>
     <table border="4" bgcolor="lightyellow">
         <tr></tr>
-            <th bgcolor="orange">SNO</th>
-            <th bgcolor="orange">Name</th>
-            <th bgcolor="orange">Coursre</th>
-            <th bgcolor="orange" colspan="3">subjects</th>
+            <th bgcolor="orange" rowspan="3">Day</th>
+            <th bgcolor="orange" colspan="3">seminar</th>
         </tr>
         <tr>
-            <td rowspan="3">1</td>
-            <td rowspan="3">Jeevan</td>
-            <td rowspan="3">CSE</td>
-            <td>sub</td>
-            <td>result</td>
-            <td>marks</td>
+         <th colspan="2">schedule</th>
+         <th rowspan="2">topic</th>
         </tr>
         <tr>
-            <td>Java</td>
-            <td>pass</td>
-            <td>45</td>
+            <td>begin</td>
+            <td>End</td>
         </tr>
         <tr>
-            <td>maths</td>
-            <td>pass</td>
-            <td>48</td>
+            <td rowspan="2">Monday</td>
+            <td rowspan="2">8:00 am</td>
+            <td rowspan="2">5:00 pm</td>
+            <td>Introduction to xml</td>
         </tr>
         <tr>
-            <td rowspan="3">2</td>
-            <td rowspan="3">Ram</td>
-            <td rowspan="3">CSE</td>
-            <td>Name</td>
-            <td>result</td>
-            <td>marks</td>
+            <td>validity DtD and realax</td>
         </tr>
         <tr>
-            <td>Java</td>
-            <td>pass</td>
-            <td>36</td>
+            <td rowspan="2">Tuesday</td>
+            <td >8:00 am</td>
+            <td >5:00 pm</td>
+            <td rowspan="2">Xpath</td>
         </tr>
         <tr>
-            <td>maths</td>
-            <td>pass</td>
-            <td>36</td>
+            <td >8:00 am</td>
+            <td >5:00 pm</td>
+
         </tr>
         <tr>
-            <td rowspan="2">3</td>
-            <td rowspan="2">Jai</td>
-            <td>CSE</td>
-            <td>sub</td>
-            <td>result</td>
-            <td>marks</td>
+            <td>Thursday</td>
+            <td >8:00 am</td>
+            <td >5:00 pm</td>
+            <td>introduction to xml</td>
+
         </tr>
-        <tr>
-            <td>AI</td>
-            <td>maths</td>
-            <td>pass</td>
-            <td>56</td>
-        </tr>
+        
     </table>
 </body>
 </html>
