--- a/web.html
+++ b/web.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="web.css">
 </head>
 <body>
-   <div id="cont" class="container" >
+   <div  class="container">
         <div class="container1">
             <div id="navbar1">
                 <div id="nav">Home</div>
@@ -25,6 +25,18 @@
                 <div id="nav">Gallery</div>
                 <div id="nav">Contact US</div>
             </div>
+        </div>
+        <div class="container3">
+            <div class="box">Image 1</div>
+            <div class="box">Image 2</div>
+            <div class="box">Image 3</div>
+        </div>
+        <div id="navbar3">
+            <div id="nav"> Home</div>
+            <div id="nav"> About</div>
+            <div id="nav"> Course</div>
+            <div id="nav">Gallery</div>
+            <div id="nav">Contact US</div>
         </div>
    </div>
 </body>
