--- a/grid.html
+++ b/grid.html
@@ -3,63 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Css Fonts</title>
     <style>
-        .grid{
-            display: grid;
-            border: 5px solid black;
-            grid-template-columns:33% 33% 33% 33%;
-            grid-template-rows: 40% calc();
-            width:100%;
-            height:100vh;
-            grid-area:;
-            'one two tow three three three'
-            'one four five five five six'
-            'seven ';
-        }
-        .grid-item{
-            background-color: aqua;
-        }
-        #grid-item1{
-            background-color: red;
-        }
-        #grid-item2{
-            background-color: aqua;
-        }
-        #grid-item3{
-            background-color: yellow;
-        }
-        #grid-item4{
-            background-color: white;
-        }
-        #grid-item5{
-            background-color: yellowgreen;
-        }
-        #grid-item6{
-            background-color: white;
-        }
-        #grid-item7{
-            background-color: red;
-        }
-        #grid-item8{
-            background-color: red;
-        }
-        #grid-item9{
-            background-color: aqua;
-        }
+        font-family:;
     </style>
 </head>
 <body>
-    <div class="grid">
-        <div id="grid-item" id="grid-item1">1</div>
-        <div id="grid-item" id="grid-item2">2</div>
-        <div id="grid-item" id="grid-item3">3</div>
-        <div id="grid-item" id="grid-item4">4</div>
-        <div id="grid-item" id="grid-item5">5</div>
-        <div id="grid-item" id="grid-item6">6</div>
-        <div id="grid-item" id="grid-item7">7</div>
-        <div id="grid-item" id="grid-item8">8</div>
-        <div id="grid-item" id="grid-item9">9</div>
-    </div>
+    <h4>Css Fonts</h4>
+    <p>Lets play with . It is very excitin</p>
 </body>
 </html>
