--- a/grid.html
+++ b/grid.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Css Fonts</title>
-    <style>
-        font-family:;
-    </style>
+    <title>Inline CSS Grid</title>
 </head>
 <body>
-    <h4>Css Fonts</h4>
-    <p>Lets play with . It is very excitin</p>
+    <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; padding: 20px;">
+        <div style="background-color: lightblue; padding: 20px; text-align: center; font-size: 1.5rem; border: 1px solid #000;">1</div>
+        <div style="background-color: lightblue; padding: 20px; text-align: center; font-size: 1.5rem; border: 1px solid #000;">2</div>
+        <div style="background-color: lightblue; padding: 20px; text-align: center; font-size: 1.5rem; border: 1px solid #000;">3</div>
+        <div style="background-color: lightblue; padding: 20px; text-align: center; font-size: 1.5rem; border: 1px solid #000;">4</div>
+        <div style="background-color: lightblue; padding: 20px; text-align: center; font-size: 1.5rem; border: 1px solid #000;">5</div>
+        <div style="background-color: lightblue; padding: 20px; text-align: center; font-size: 1.5rem; border: 1px solid #000;">6</div>
+    </div>
 </body>
 </html>
